# mobile_robotics

./: .gitignore  README.md
lab04/: README.md
lab04/src/ex_robot1_control/: CMakeLists.txt
lab04/src/ex_robot1_control/config/: ex_robot1_control.yaml
lab04/src/ex_robot1_control/launch/: ex_robot1_control.launch
lab04/src/ex_robot1_description/: package.xml
lab04/src/ex_robot1_description/urdf/: ex_robot1.urdf
lab04/src/ex_robot1_gazebo/world/: ex_robot1.world
lab06/: .gitignore  README.md
lab06/src/lab_06_package/: package.xml
lab06/src/lab_06_package/src/: command_node.cpp  control_node.cpp
lab06/src/uuv_cyclops_description/launch/: upload_cyclops_heroslam.launch
lab06/src/uuv_cyclops_description/meshes/: 20prop.DAE
lab06/src/uuv_cyclops_description/urdf/: cyclops_actuators.xacro  cyclops_base.xacro  testbot.urdf
lab06/src/uuv_descriptions/: CMakeLists.txt
lab06/src/uuv_gazebo_worlds/models/ground_plane_sand_texture/: model-1_3.sdf
lab06/src/uuv_sensor_ros_plugins/meshes/: didson.dae
lab06/src/uuv_sensor_ros_plugins/urdf/: imu_snippets.xacro
lab07/: README.md  install_deps.sh
lab07/src/lab_07_pid_controller/src/: auv_controller_node.cpp  teleop_keyboard.cpp
lab07/src/uuv_cyclops_description/launch/: upload_cyclops_heroslam.launch
lab07/src/uuv_cyclops_description/urdf/: cyclops_base.xacro
lab07/src/uuv_gazebo_worlds/models/ground_plane_sand_texture/: model-1_2.sdf
lab07/src/uuv_gazebo_worlds/worlds/: hero_slam.world
name_controller_template/: CMakeLists.txt  Readme.md  Readme.txt  package.xml
name_controller_template/src/: auv_controller_node.cpp  teleop_keyboard.cpp
src/ex_robot1_control/: CMakeLists.txt  package.xml
src/ex_robot1_control/config/: ex_robot1_control.yaml
src/ex_robot1_control/launch/: ex_robot1_control.launch
src/ex_robot1_description/: CMakeLists.txt  package.xml
src/ex_robot1_description/launch/: ex_robot1_rviz.launch
src/ex_robot1_description/urdf/: ex_robot1.urdf
src/ex_robot1_gazebo/: CMakeLists.txt  package.xml
src/ex_robot1_gazebo/launch/: ex_robot1_world.launch
src/ex_robot1_gazebo/world/: ex_robot1.world
src/lab_06_package/: CMakeLists.txt
src/lab_06_package/src/: command_node.cpp  control_node.cpp
src/lab_07_pid_controller/: CMakeLists.txt  package.xml
src/lab_07_pid_controller/src/: auv_controller_node.cpp
src/uuv_cyclops_description/: CMakeLists.txt  package.xml
src/uuv_cyclops_description/config/: gripper.yaml
src/uuv_cyclops_description/launch/: upload_cyclops_heroslam.launch
src/uuv_cyclops_description/meshes/: prop.dae
src/uuv_cyclops_description/robots/: cyclops_default.xacro
src/uuv_cyclops_description/urdf/: cyclops_gazebo.xacro  cyclops_sensors.xacro  gripper_left.DAE  gripper_right.DAE
src/uuv_descriptions/scripts/: spawn_model
src/uuv_gazebo_worlds/launch/: heroslam_map.launch
src/uuv_gazebo_worlds/models/ground_plane_sand_texture/: model-1_4.sdf  model.config  model.sdf
src/uuv_gazebo_worlds/models/herkules_seabed/: model.sdf
src/uuv_sensor_ros_plugins/meshes/: cy_camera.dae
src/uuv_sensor_ros_plugins/urdf/: camera_snippets.xacro  sonar_snippets.xacro
