<?xml version="1.0"?>
<package format="2">
  <name>ex_robot1_control</name>
  <version>0.0.1</version>
  <description>
    Lab 4 control package for ex_robot1. Provides the YAML controller
    configuration and the launch file that loads the controllers into
    the ros_control controller_manager running inside Gazebo via the
    gazebo_ros_control plugin. Reproduces Lab 4 slide pages 26-31.
  </description>

  <maintainer email="cite700x@postech.ac.kr">CITE700X Mobile Robotics</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>controller_manager</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>effort_controllers</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
</package>
