<?xml version="1.0"?>
<package format="2">
  <name>ex_robot1_description</name>
  <version>0.0.1</version>
  <description>
    Lab 4 description package: URDF model and RViz visualization of the
    ex_robot1 example manipulator. Pre-class TODOs (1-4) are completed
    for 1-DoF. In-class assignment extends to 2-DoF.
  </description>
  <maintainer email="cite700x@postech.ac.kr">CITE700X Mobile Robotics</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>urdf_tutorial</exec_depend>
</package>
