<?xml version="1.0"?>
<package format="2">
  <name>ex_robot1_gazebo</name>
  <version>0.0.1</version>
  <description>
    Gazebo simulation package for ex_robot1.
    Provides the world file (ground + lighting + camera) and a launch
    file that spawns the URDF into Gazebo for dynamic simulation.
  </description>
  <maintainer email="cite700x@postech.ac.kr">CITE700X Mobile Robotics</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- <depend> = needed at both build time and runtime -->
  <depend>gazebo_plugins</depend>       <!-- Gazebo sensor/actuator plugins -->
  <depend>gazebo_ros</depend>           <!-- Gazebo <-> ROS bridge (spawn_model, etc.) -->
  <depend>xacro</depend>                <!-- URDF macro processor -->
  <depend>urdf</depend>                 <!-- URDF parser -->
  <depend>ex_robot1_description</depend> <!-- our URDF model package -->
</package>
